libs/runtime/blueprint-config-parser/tests/snapshots/blueprint_config_test__parses_hybrid_api_blueprint_config_from_jsonc_file.snap
---
source: blueprint-config-parser/tests/blueprint_config_test.rs
expression: blueprint_config
---
{
  "version": "2025-05-12",
  "transform": [
    "celerity-2026-02-28"
  ],
  "variables": {
    "certificateId": {
      "type": "string",
      "description": "The ID of the certificate to use for the API domain."
    },
    "secretStoreId": {
      "type": "string",
      "description": "The ID of the secret store to use for storing secrets."
    }
  },
  "resources": {
    "getOrderHandler": {
      "type": "celerity/handler",
      "metadata": {
        "displayName": "Get Order Handler",
        "annotations": {
          "celerity.handler.http": true,
          "celerity.handler.http.method": "GET",
          "celerity.handler.http.path": "/orders/{orderId}"
        },
        "labels": {
          "application": "orders"
        }
      },
      "spec": null
    },
    "orderStreamHandler": {
      "type": "celerity/handler",
      "metadata": {
        "displayName": "Order Stream Handler",
        "annotations": {
          "celerity.handler.guard.protectedBy": "jwtWebSocket",
          "celerity.handler.websocket": true,
          "celerity.handler.websocket.routeKey": "stream"
        },
        "labels": {
          "application": "orders"
        }
      },
      "spec": {
        "handlerName": "Orders-OrderStreamHandler-v1",
        "codeLocation": "./orders",
        "handler": "handlers.order_stream",
        "runtime": "python3.12.x",
        "memory": 1024,
        "timeout": 60,
        "tracingEnabled": true,
        "environmentVariables": {
          "LOG_LEVEL": "INFO",
          "SECRET_STORE_ID": "${variables.secretStoreId}"
        }
      }
    },
    "ordersApi": {
      "type": "celerity/api",
      "metadata": {
        "displayName": "Orders API"
      },
      "spec": {
        "protocols": [
          "http",
          "websocket"
        ],
        "cors": {
          "allowCredentials": true,
          "allowOrigins": [
            "https://example.com",
            "https://another.example.com"
          ],
          "allowMethods": [
            "GET",
            "POST"
          ],
          "allowHeaders": [
            "Content-Type",
            "Authorization"
          ],
          "exposeHeaders": [
            "Content-Length"
          ],
          "maxAge": 3600
        },
        "domain": {
          "domainName": "api.example.com",
          "basePaths": [
            {
              "protocol": "http",
              "basePath": "/api"
            },
            {
              "protocol": "websocket",
              "basePath": "/ws"
            }
          ],
          "normalizeBasePath": false,
          "certificateId": "${variables.certificateId}",
          "securityPolicy": "TLS_1_2"
        },
        "auth": {
          "defaultGuard": "jwtHttp",
          "guards": {
            "jwtHttp": {
              "type": "jwt",
              "issuer": "https://identity.twohundred.cloud/oauth2/v1/",
              "tokenSource": {
                "protocol": "http",
                "source": "$.headers.Authorization"
              },
              "audience": [
                "https://identity.twohundred.cloud/api/manage/v1/"
              ]
            },
            "jwtWebSocket": {
              "type": "jwt",
              "issuer": "https://identity.twohundred.cloud/oauth2/v1/",
              "tokenSource": {
                "protocol": "websocket",
                "source": "$.data.token"
              },
              "audience": [
                "https://identity.twohundred.cloud/api/manage/v1/"
              ]
            }
          }
        },
        "tracingEnabled": true
      },
      "linkSelector": {
        "byLabel": {
          "application": "orders"
        }
      }
    }
  }
}
