libs/runtime/blueprint-config-parser/tests/snapshots/blueprint_config_test__parses_websocket_api_blueprint_config_from_yaml_file.snap
---
source: blueprint-config-parser/tests/blueprint_config_test.rs
expression: blueprint_config
---
{
  "version": "2023-04-20",
  "transform": [
    "celerity-2024-07-22"
  ],
  "resources": {
    "orderStreamApi": {
      "type": "celerity/api",
      "metadata": {
        "displayName": "Order Stream API"
      },
      "spec": {
        "protocols": [
          "websocket"
        ],
        "cors": {
          "allowCredentials": null,
          "allowOrigins": [
            "https://example.com",
            "https://another.example.com"
          ],
          "allowMethods": null,
          "allowHeaders": null,
          "exposeHeaders": null,
          "maxAge": null
        },
        "domain": {
          "domainName": "api.example.com",
          "basePaths": [
            "/"
          ],
          "normalizeBasePath": false,
          "certificateId": "${variables.certificateId}",
          "securityPolicy": "TLS_1_2"
        },
        "auth": {
          "defaultGuard": "jwt",
          "guards": {
            "jwt": {
              "type": "jwt",
              "issuer": "https://identity.twohundred.cloud/oauth2/v1/",
              "tokenSource": "$.data.token",
              "audience": [
                "https://identity.twohundred.cloud/api/manage/v1/"
              ]
            }
          }
        },
        "tracingEnabled": true
      },
      "linkSelector": {
        "byLabel": {
          "application": "orders"
        }
      }
    }
  }
}
