libs/runtime/blueprint-config-parser/tests/snapshots/blueprint_config_test__parses_websocket_api_blueprint_config_with_ws_protocol_config_from_jsonc_file.snap
---
source: blueprint-config-parser/tests/blueprint_config_test.rs
expression: blueprint_config
---
{
  "version": "2025-05-12",
  "transform": [
    "celerity-2026-02-28"
  ],
  "resources": {
    "orderStreamApi": {
      "type": "celerity/api",
      "metadata": {
        "displayName": "Order Stream API"
      },
      "spec": {
        "protocols": [
          {
            "websocketConfig": {
              "routeKey": "action",
              "authStrategy": "connect"
            }
          }
        ],
        "cors": {
          "allowCredentials": null,
          "allowOrigins": [
            "https://example.com",
            "https://another.example.com"
          ],
          "allowMethods": null,
          "allowHeaders": null,
          "exposeHeaders": null,
          "maxAge": null
        },
        "domain": {
          "domainName": "api.example.com",
          "basePaths": [
            "/"
          ],
          "normalizeBasePath": false,
          "certificateId": "${variables.certificateId}",
          "securityPolicy": "TLS_1_2"
        },
        "auth": {
          "defaultGuard": "jwt",
          "guards": {
            "jwt": {
              "type": "jwt",
              "issuer": "https://identity.newstack.cloud/oauth2/v1/",
              "tokenSource": "$.data.token",
              "audience": [
                "https://identity.newstack.cloud/api/manage/v1/"
              ]
            }
          }
        },
        "tracingEnabled": true
      },
      "linkSelector": {
        "byLabel": {
          "application": "orders"
        }
      }
    }
  }
}
