libs/runtime/blueprint-config-parser/tests/snapshots/blueprint_config_test__parses_websocket_api_multi_guard_blueprint_config_from_yaml_file.snap
---
source: blueprint-config-parser/tests/blueprint_config_test.rs
expression: blueprint_config
---
{
  "version": "2025-11-02",
  "transform": [
    "celerity-2026-02-28"
  ],
  "variables": {
    "certificateId": {
      "type": "string",
      "description": "The ID of the certificate to use for the API domain."
    }
  },
  "resources": {
    "orderStreamApi": {
      "type": "celerity/api",
      "metadata": {
        "displayName": "Order Stream API"
      },
      "spec": {
        "protocols": [
          {
            "websocketConfig": {
              "routeKey": "action",
              "authStrategy": "connect",
              "authGuard": [
                "jwt",
                "customGuard"
              ]
            }
          }
        ],
        "cors": {
          "allowCredentials": null,
          "allowOrigins": [
            "https://example.com",
            "https://another.example.com"
          ],
          "allowMethods": null,
          "allowHeaders": null,
          "exposeHeaders": null,
          "maxAge": null
        },
        "domain": {
          "domainName": "api.example.com",
          "basePaths": [
            "/"
          ],
          "normalizeBasePath": false,
          "certificateId": "certificate-id",
          "securityPolicy": "TLS_1_2"
        },
        "auth": {
          "defaultGuard": [
            "jwt"
          ],
          "guards": {
            "customGuard": {
              "type": "custom",
              "tokenSource": "$.headers.Authorization"
            },
            "jwt": {
              "type": "jwt",
              "issuer": "https://identity.newstack.cloud/oauth2/v1/",
              "tokenSource": "$.data.token",
              "audience": [
                "https://identity.newstack.cloud/api/manage/v1/"
              ]
            }
          }
        },
        "tracingEnabled": true
      },
      "linkSelector": {
        "byLabel": {
          "application": "orders"
        }
      }
    }
  }
}
